Adding delete, redirect, etc
