# rails_app/config/routes/api.rb
@@ -26,7 +26,7 @@ namespace :api, defaults: {format: :json} do
       end
     end
     resources :uploads, only: [:create, :index, :show, :destroy]
-    resources :projects, only: [:index]
+    resources :projects, only: [:index, :destroy], param: :uuid
 
     resources :websites, only: [] do
       resource :context, only: [:show], controller: "context"
